notification-istio/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notification
  namespace: backend
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: "/notification"
        - uri:
            prefix: "/ws"
      route:
        - destination:
            host: notification.backend.svc.cluster.local
            port:
              number: 8087
